tests/snapshots/test_generics__fn_precedence_in_where_clause.snap
---
created: "2019-03-11T05:40:08.879764440Z"
creator: insta@0.7.1
source: tests/test_generics.rs
expression: syntax_tree
---
ItemFn {
    attrs: [],
    vis: Inherited,
    constness: None,
    unsafety: None,
    asyncness: None,
    abi: None,
    ident: Ident(
        f
    ),
    decl: FnDecl {
        fn_token: Fn,
        generics: Generics {
            lt_token: Some(
                Lt
            ),
            params: [
                Type(
                    TypeParam {
                        attrs: [],
                        ident: Ident(
                            G
                        ),
                        colon_token: None,
                        bounds: [],
                        eq_token: None,
                        default: None
                    }
                )
            ],
            gt_token: Some(
                Gt
            ),
            where_clause: Some(
                WhereClause {
                    where_token: Where,
                    predicates: [
                        Type(
                            PredicateType {
                                lifetimes: None,
                                bounded_ty: Path(
                                    TypePath {
                                        qself: None,
                                        path: Path {
                                            leading_colon: None,
                                            segments: [
                                                PathSegment {
                                                    ident: Ident(
                                                        G
                                                    ),
                                                    arguments: None
                                                }
                                            ]
                                        }
                                    }
                                ),
                                colon_token: Colon,
                                bounds: [
                                    Trait(
                                        TraitBound {
                                            paren_token: None,
                                            modifier: None,
                                            lifetimes: None,
                                            path: Path {
                                                leading_colon: None,
                                                segments: [
                                                    PathSegment {
                                                        ident: Ident(
                                                            FnOnce
                                                        ),
                                                        arguments: Parenthesized(
                                                            ParenthesizedGenericArguments {
                                                                paren_token: Paren,
                                                                inputs: [],
                                                                output: Type(
                                                                    RArrow,
                                                                    Path(
                                                                        TypePath {
                                                                            qself: None,
                                                                            path: Path {
                                                                                leading_colon: None,
                                                                                segments: [
                                                                                    PathSegment {
                                                                                        ident: Ident(
                                                                                            i32
                                                                                        ),
                                                                                        arguments: None
                                                                                    }
                                                                                ]
                                                                            }
                                                                        }
                                                                    )
                                                                )
                                                            }
                                                        )
                                                    }
                                                ]
                                            }
                                        }
                                    ),
                                    Add,
                                    Trait(
                                        TraitBound {
                                            paren_token: None,
                                            modifier: None,
                                            lifetimes: None,
                                            path: Path {
                                                leading_colon: None,
                                                segments: [
                                                    PathSegment {
                                                        ident: Ident(
                                                            Send
                                                        ),
                                                        arguments: None
                                                    }
                                                ]
                                            }
                                        }
                                    )
                                ]
                            }
                        ),
                        Comma
                    ]
                }
            )
        },
        paren_token: Paren,
        inputs: [],
        variadic: None,
        output: Default
    },
    block: Block {
        brace_token: Brace,
        stmts: []
    }
}
